fix(): 修复了ResourceCheckPermissionDTO中groupRoles的key类型异常的问题